--- a/src/pages/auth/SignIn/index.module.css
+++ b/src/pages/auth/SignIn/index.module.css
@@ -4,7 +4,7 @@
     max-width: rem(600px);
     padding-top: rem(80px);
 
-    @media (max-width: $mantine-breakpoint-sm) {
+    @media (max-width: 768px) {
         max-width: 100%;
     }
 }
