--- a/src/components/Layout/LayoutTypes/CollapsedSideBar.module.css
+++ b/src/components/Layout/LayoutTypes/CollapsedSideBar.module.css
@@ -1,6 +1,6 @@
 .navbar {
     height: 100vh;
-    padding: var(--mantine-spacing-md);
+    padding: var(--mantine-spacing-xs);
     display: flex;
     flex-direction: column;
     border-right: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
@@ -13,7 +13,7 @@
 }
 
 .logo {
-    width: 4rem;
+    width: 3rem;
 }
 
 .linkWrapper {
