--- a/src/pages/brand/index.module.css
+++ b/src/pages/brand/index.module.css
@@ -5,3 +5,9 @@
   .avatar {
     border: 2px solid var(--mantine-color-body);
   }
+
+.button {
+    background-color: var(--mantine-color-white);
+    color: var(--mantine-color-white);
+    border: 2px solid var(--mantine-color-primary);
+}
